Übernahme der Änderungen im Kitodo-Production Wiki per 20181106